add sendmail and form js

--- a/src/comments.html
+++ b/src/comments.html
@@ -936,7 +936,7 @@
 				<div class="modal__descr">і ми перетелефонуємо вам на протязі 10хв</div>
 				<form class="forms" action="#">
 					<input name="name"  class="forms__input" required placeholder="Ваше имя" >
-					<input name="number"  class="forms__input" required placeholder="Ваш телефон" >
+					<input name="phone"  class="forms__input" required placeholder="Ваш телефон" >
 					<input name="email"  class="forms__input" required placeholder="Ваше E-mail" >
 
 					<button class="consultation__button">
