--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
 				</h3>
 				<form class="forms" action="#" id=consultation-form>
 						<input name="name" class="forms__input" placeholder="Ваше ім'я" >
-						<input name="number" class="forms__input" placeholder="Ваш телефон" >
+						<input name="phone" class="forms__input" placeholder="Ваш телефон" >
 						<input name="email" class="forms__input" placeholder="Ваш E-mail" >
 
 						<button class="consultation__button">
@@ -737,9 +737,9 @@
 		<div class="modal__close">&times;</div>
 			<div class="modal__subtitle">Просто заповніть форму</div>
 				<div class="modal__descr">і ми перетелефонуємо вам на протязі 10хв</div>
-				<form class="forms" action="gaida777777@gmail.com">
+				<form class="forms">
 					<input name="name"  class="forms__input" required placeholder="Ваше имя" >
-					<input name="number"  class="forms__input" required placeholder="Ваш телефон" >
+					<input name="phone"  class="forms__input" required placeholder="Ваш телефон" >
 					<input name="email"  class="forms__input" required placeholder="Ваше E-mail" >
 
 					<button class="consultation__button">
